@@ -44,6 +44,7 @@ This release includes the following bugfixes:
  o improved NSS initing
  o curl_easy_reset now resets more options
  o rare Location: follow bug with the multi interface
+ o the configure script can now detect gnutls with pkg-config
 
 This release includes the following known bugs:
 
@@ -56,6 +57,6 @@ advice from friends like these:
  Markus Koetter, Josef Wolf, Vlad Grachov, Pawel Kierski, Igor Novoseltsev,
  Fred Machado, Ken Hirsch, Keshav Krity, Patrick Monnerat, Mark Karpeles,
  Anthony Bryan, Peter Korsgaard, Phil Lisiecki, Bas Mevissen, Rob Crittenden,
- Emil Romanus, Karl Moerder
+ Emil Romanus, Karl Moerder, Daniel Black
 
         Thanks! (and sorry if I forgot to mention someone)
